--- a/rect.html
+++ b/rect.html
@@ -2,23 +2,23 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width">
+ <title>repl.it</title>
+ <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-	<div class="topnav">
-		<a class="active" href="/index.html">Home</a>
-		<a href="/circ.html">Circle</a>
-		<a href="/rect.html">Rectangle</a>
-		<a href="/square.html">Square</a>
-		<a href="/trap.html">Trapezoid</a>
-		<a href="/tri.html">Triangle</a>
-	</div>
-	<h3> Area of Rectangle </h3>
-	<br>
+ <div class="topnav">
+ <a class="active" href="/index.html">Home</a>
+ <a href="/circ.html">Circle</a>
+ <a href="/rect.html">Rectangle</a>
+ <a href="/square.html">Square</a>
+ <a href="/trap.html">Trapezoid</a>
+ <a href="/tri.html">Triangle</a>
+ </div>
+ <h3> Area of Rectangle </h3>
+ <br>
 <img src= "./Images/rect.jpg" alt= "picture of the area of a rectangle formula" width="40%">
 <br>
 <p> Please input the correct numbers to get your desired result </p>
@@ -26,7 +26,7 @@
   <input type="numbers" onfocus="this.value=''" value="Enter width" id="width" name="width">
   <button id="button">Calculate</button>
   <p> Area = </p>
-   <p id="rectArea"></p>
+   <p id="rectarea"></p>
     <script src="script.js"></script>
   </body>
 </html>
