--- a/circ.html
+++ b/circ.html
@@ -7,6 +7,7 @@
  <title>repl.it</title>
  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+<body>
 <div class="topnav">
  <a class="active" href="/index.html">Home</a>
   <a href="/circ.html">Circle</a>
