--- a/trap.html
+++ b/trap.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width">
+ <title>repl.it</title>
+ <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="topnav">
@@ -23,10 +23,10 @@
 <p> Please input the correct numbers to get your desired result </p>
  <input type="numbers" onfocus="this.value=''" value="Enter height" id="height" name="height">
   <input type="numbers" onfocus="this.value=''" value="Enter base" id="base" name="base">
-   <input type="numbers" onfocus="this.value=''" value="parralel Length" id="parralelLength" name="parralelLength">
+   <input type="numbers" onfocus="this.value=''" value="parralel Length" id="parralellength" name="parralellength">
     <button id="button">Calculate</button>
   <p> Area = </p>
-   <p id="trapArea"></p>
+   <p id="traparea"></p>
     <script src="script.js"></script>
   </body>
 </html>
