--- a/circ.html
+++ b/circ.html
@@ -21,12 +21,10 @@
 <img src= "./Images/circ.jpg" alt= "picture of the area of a circle formula" width="40%">
 <br>
 <p> Please input the correct numbers to get your desired result</p>
- <input type="number" onfocus="this.value=''" value="Enter Diameter" id="diameter" name="diameter">
-  <button id="button">Calculate</button>
+ <input type="numbers" onfocus="this.value=''" value="Enter diameter" id="diameter" name="diameter">
+   <button id="button">Calculate</button>
   <p> Area = </p>
    <p id="area"></p>
- <script src="script.js">
-	</script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
